fixes #22 Header issues on mobile

--- a/_sass/components/layout/_header.scss
+++ b/_sass/components/layout/_header.scss
@@ -277,4 +277,8 @@
 }
 .headroom--unpinned {
     transform: translateY(-100%);
+
+    &.headroom--disabled {
+        transform: translateY(0%);
+    }
 }
